YTI-705, YTI-706, YTI-694: Service and entities for new "POJO based" elastic search APIs. Front page deep search.
Squashed commit of the following:

commit b6ef90ef012eb719c90924e1cc01d4e57663ac1e
Merge: 0ee06d41 07bc2911
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Mon Jun 17 10:24:15 2019 +0300

    Merge branch 'master' into YTI-706_NewSearchAPIs

commit 0ee06d41e6d8bc2e7939868547ac26f190b35244
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Mon Jun 17 10:22:48 2019 +0300

    YTI-694: Add TODO for removing kludge divide-by-type.

commit f7335293b7a48fd1665469ce15a4b5c956d95a74
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Mon Jun 17 10:21:18 2019 +0300

    YTI-694: Add kludge divide-by-type to better demonstrate final deep search result presentation. Fighting with AngularJS translate pipe thingie.

commit 3929f4a9d8014d44fa9b1f25f5f219872286eeca
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Fri Jun 14 15:14:12 2019 +0300

    YTI-694: Make navigation to deep search results (resources) work.

commit 015680bbd2055b37abcc5ebec13aab72916eb4ee
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Fri Jun 14 13:27:39 2019 +0300

    YTI-694: Pre-mapped types in index objects.

commit f03c734574dbf733bd612b3767488cfed305e913
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Fri Jun 14 09:00:03 2019 +0300

    YTI-694: Refactoring index search entity classes to types etc.

commit 7a51d19167794c80c5f40df1276a63d1a07dc2cb
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Thu Jun 13 14:58:48 2019 +0300

    YTI-694: Preliminarily display deep search results.

commit 533a548620fa5c1e922cf02f6b485373f29999bf
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Wed Jun 12 15:40:10 2019 +0300

    YTI-694: Load front page model list from elastic search.

commit 6e6aa1932e1bd80c1051b247c3c344de148584c3
Author: Tuomo Soinio <tuomo.soinio@gofore.com>
Date:   Wed Jun 12 13:49:38 2019 +0300

    YTI-694: Move stuff from constructor t

--- a/po/template.pot
+++ b/po/template.pot
@@ -322,6 +322,12 @@ msgstr ""
 msgid "INFO_TEXT_FRONTPAGE_FILTER_RESULTS"
 msgstr ""
 
+msgid " hit"
+msgstr ""
+
+msgid "Total results"
+msgstr ""
+
 msgid "Add model"
 msgstr ""
 
@@ -337,6 +343,12 @@ msgstr ""
 msgid "Search model"
 msgstr ""
 
+msgid "Extend search"
+msgstr ""
+
+msgid "to content"
+msgstr ""
+
 msgid "Filter with information domain"
 msgstr ""
 
@@ -347,6 +359,9 @@ msgid "result"
 msgstr ""
 
 msgid "results"
+msgstr ""
+
+msgid "Search results"
 msgstr ""
 
 msgid "Maintenance content"
@@ -940,7 +955,7 @@ msgstr ""
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Created at"
+msgid "Member groups"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1359,10 +1374,10 @@ msgstr ""
 msgid "User name"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Created at"
 msgstr ""
 
-msgid "Member groups"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Admin groups"
@@ -1692,6 +1707,18 @@ msgid "All model types"
 msgstr ""
 
 msgid "All use contexts"
+msgstr ""
+
+msgid "Deep class hit"
+msgstr ""
+
+msgid "Deep shape hit"
+msgstr ""
+
+msgid "Deep attribute hit"
+msgstr ""
+
+msgid "Deep association hit"
 msgstr ""
 
 msgid "Superproperty info"
