--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-06-05 12:28+0300\n"
+"PO-Revision-Date: 2019-06-17 10:13+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -340,6 +340,12 @@ msgstr ""
 "upkeeping the model. Type is either core vocabulary or application profile. "
 "Status is for the governance status of the model."
 
+msgid " hit"
+msgstr ""
+
+msgid "Total results"
+msgstr ""
+
 msgid "Add model"
 msgstr ""
 
@@ -362,6 +368,12 @@ msgstr ""
 msgid "Search model"
 msgstr ""
 
+msgid "Extend search"
+msgstr ""
+
+msgid "to content"
+msgstr ""
+
 msgid "Filter with information domain"
 msgstr ""
 
@@ -372,6 +384,9 @@ msgid "result"
 msgstr ""
 
 msgid "results"
+msgstr ""
+
+msgid "Search results"
 msgstr ""
 
 msgid "Maintenance content"
@@ -396,25 +411,17 @@ msgstr ""
 msgid "Edit reference data"
 msgstr ""
 
-#, fuzzy
-#| msgid "Add model description"
 msgid "Datamodel definition"
 msgstr ""
-"Add domain specific Core Vocabulary or application specific Application "
-"Profile"
 
 msgid "Datamodel details"
 msgstr ""
 
-#, fuzzy
-#| msgid "InformationPool"
 msgid "Information domain"
-msgstr "Information pool"
+msgstr ""
 
-#, fuzzy
-#| msgid "association"
 msgid "Organization"
-msgstr "Association"
+msgstr ""
 
 msgid "Browse reference data codes"
 msgstr ""
@@ -1011,7 +1018,7 @@ msgstr "Terminology"
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Created at"
+msgid "Member groups"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1459,10 +1466,10 @@ msgstr ""
 msgid "User name"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Created at"
 msgstr ""
 
-msgid "Member groups"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Admin groups"
@@ -1796,6 +1803,18 @@ msgstr ""
 
 msgid "All use contexts"
 msgstr ""
+
+msgid "Deep class hit"
+msgstr "Classes"
+
+msgid "Deep shape hit"
+msgstr "Shapes"
+
+msgid "Deep attribute hit"
+msgstr "Attributes"
+
+msgid "Deep association hit"
+msgstr "Associations"
 
 msgid "Superproperty info"
 msgstr ""
