--- a/po/fi.po
+++ b/po/fi.po
@@ -343,6 +343,12 @@ msgstr ""
 "voi olla tietokomponenttikirjasto tai soveltamisprofiili. Tila tarkoittaa "
 "tietomallin hallinnan tilaa."
 
+msgid " hit"
+msgstr ""
+
+msgid "Total results"
+msgstr "Osumia yhteensä"
+
 msgid "Add model"
 msgstr "Lisää tietomalli"
 
@@ -363,6 +369,12 @@ msgstr ""
 msgid "Search model"
 msgstr "Hae tietomallia"
 
+msgid "Extend search"
+msgstr "Kohdista haku myös"
+
+msgid "to content"
+msgstr "sisältöihin"
+
 msgid "Filter with information domain"
 msgstr "Rajaa tietoalueella"
 
@@ -374,6 +386,9 @@ msgstr "hakutulos"
 
 msgid "results"
 msgstr "hakutulosta"
+
+msgid "Search results"
+msgstr "Hakutulokset"
 
 msgid "Maintenance content"
 msgstr ""
@@ -1031,8 +1046,8 @@ msgstr ""
 "Täältä voit lisätä luokalle uuden attribuutin jonka arvoalue perustuu "
 "tietotyyppiin tai assosiaation jolla viitataan toiseen luokkaan"
 
-msgid "Created at"
-msgstr "Luotu"
+msgid "Member groups"
+msgstr "Käyttäjänä ryhmissä"
 
 msgid "not found in the concept database"
 msgstr "ei löydy sanastosta"
@@ -1481,11 +1496,11 @@ msgstr "Käyttäjätunnus"
 msgid "User name"
 msgstr "Nimi"
 
+msgid "Created at"
+msgstr "Luotu"
+
 msgid "Define concept for the class"
 msgstr "Määrittele käsite luokalle"
-
-msgid "Member groups"
-msgstr "Käyttäjänä ryhmissä"
 
 msgid "Admin groups"
 msgstr "Pääkäyttäjänä ryhmissä"
@@ -1819,6 +1834,18 @@ msgstr "Kaikki tietomallityypit"
 
 msgid "All use contexts"
 msgstr "Kaikki sisältötyypit"
+
+msgid "Deep class hit"
+msgstr "Luokat"
+
+msgid "Deep shape hit"
+msgstr "Tarkennetut luokat"
+
+msgid "Deep attribute hit"
+msgstr "Attribuutit"
+
+msgid "Deep association hit"
+msgstr "Assosiaatiot"
 
 msgid "Superproperty info"
 msgstr "Yleistettävissä oleva ominaisuus, joka on semantiikaltaan laajempi"
