YTI-729: Adding Comments application link to burger menu.

--- a/po/template.pot
+++ b/po/template.pot
@@ -460,6 +460,9 @@ msgstr ""
 msgid "Suomi.fi Reference Data"
 msgstr ""
 
+msgid "Suomi.fi Comments"
+msgstr ""
+
 msgid "User right management"
 msgstr ""
 
