--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Copied"
@@ -486,6 +486,9 @@ msgstr "Suomi.fi-sanastot"
 
 msgid "Suomi.fi Reference Data"
 msgstr "Suomi.fi-koodistot"
+
+msgid "Suomi.fi Comments"
+msgstr "Suomi.fi-kommentit"
 
 msgid "User right management"
 msgstr "Oikeuksienhallinta"
