Fix misleading (due to deep search) front page search hint.

--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Copied"
@@ -325,8 +325,8 @@ msgstr ""
 "Haku kohdistuu oletuksena tietomallien nimiin. Voit hakea muilla "
 "hakuehdoilla käyttämällä \"Tarkennettu haku\" -toimintoa."
 
-msgid "Search term (model name)"
-msgstr "Hakusana (tietomallin nimi)"
+msgid "Search term"
+msgstr "Hakusana"
 
 msgid "INFO_TEXT_FRONTPAGE_FILTER_W_CLASSIFICATION"
 msgstr ""
