YTI-213 Allow "-" and "_" characters in prefix and set its maxlengt to 10

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-07-09 13:13+0300\n"
+"PO-Revision-Date: 2019-08-16 09:16+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -296,7 +296,9 @@ msgid "Length error"
 msgstr ""
 
 msgid "Prefix error"
-msgstr "Prefix can contain only lowercase letters. No Scandinavian letters."
+msgstr ""
+"Prefix must start with lowercase letter. It can contain only lowercase "
+"letters, numbers and characters \"-\" and \"_\". No Scandinavian letters."
 
 msgid "Negative error"
 msgstr ""
