--- a/po/fi.po
+++ b/po/fi.po
@@ -225,8 +225,14 @@ msgstr "Profiilien luokat"
 msgid "External classes"
 msgstr "Ulkoiset luokat"
 
+msgid "Include:"
+msgstr "Näytä myös:"
+
 msgid "All information domains"
 msgstr "Kaikki tietoalueet"
+
+msgid "All class types"
+msgstr "Kaikki luokkatyypit"
 
 msgid "All statuses"
 msgstr "Kaikki tilat"
@@ -245,9 +251,6 @@ msgstr "Tarkenna URI-tunnisteesta"
 
 msgid "Actions"
 msgstr "Toiminnot"
-
-msgid "Show class information"
-msgstr "Näytä luokan tiedot"
 
 msgid "Copy class"
 msgstr "Kopioi luokka"
@@ -1084,11 +1087,8 @@ msgstr ""
 "Täältä voit lisätä luokalle uuden attribuutin jonka arvoalue perustuu "
 "tietotyyppiin tai assosiaation jolla viitataan toiseen luokkaan"
 
-msgid "Do you want to add following properties from class?"
-msgstr "Haluatko lisätä seuraavat ominaisuudet luokasta?"
-
-msgid "Admin groups"
-msgstr "Pääkäyttäjänä ryhmissä"
+msgid "Do you want to add following properties from super class?"
+msgstr "Haluatko lisätä seuraavat ominaisuudet yläluokasta?"
 
 msgid "not found in the concept database"
 msgstr "ei löydy sanastosta"
@@ -1546,6 +1546,9 @@ msgstr "Muokattu"
 msgid "Member groups"
 msgstr "Käyttäjänä ryhmissä"
 
+msgid "Admin groups"
+msgstr "Pääkäyttäjänä ryhmissä"
+
 msgid "Add properties from class"
 msgstr "Lisää ominaisuudet luokasta"
 
@@ -1561,11 +1564,11 @@ msgstr "Lisää ominaisuudet nostettavaan luokkaan"
 msgid "Add properties from external class"
 msgstr "Lisää ominaisuudet ulkoisesta luokasta"
 
+msgid "Do you want to add following properties from class?"
+msgstr "Haluatko lisätä seuraavat ominaisuudet luokasta?"
+
 msgid "Define concept for the class"
 msgstr "Määrittele käsite luokalle"
-
-msgid "Do you want to add following properties from super class?"
-msgstr "Haluatko lisätä seuraavat ominaisuudet yläluokasta?"
 
 msgid "Do you want to add following properties from scope class?"
 msgstr "Haluatko lisätä seuraavat ominaisuudet tarkennettavasta luokasta?"
@@ -1650,6 +1653,9 @@ msgstr "Luo yläattribuutti"
 
 msgid "Create super association"
 msgstr "Luo yläassosiaatio"
+
+msgid "Show class information"
+msgstr "Näytä luokan tiedot"
 
 msgid "Show attribute information"
 msgstr "Näytä attribuutin tiedot"
@@ -2407,7 +2413,10 @@ msgid "API path"
 msgstr "API polku"
 
 msgid "API path info"
-msgstr "Vähintään yhdelle luokalle on määriteltävä API polku jotta Open API kuvaus voidaan tuottaa oikein. API polkuun voidaan määritellä polku- ({}) tai kyselyparametreja (?&) esimerkiksi: /org/{id}/person?name&role"
+msgstr ""
+"Vähintään yhdelle luokalle on määriteltävä API polku jotta Open API kuvaus "
+"voidaan tuottaa oikein. API polkuun voidaan määritellä polku- ({}) tai "
+"kyselyparametreja (?&) esimerkiksi: /org/{id}/person?name&role"
 
 msgid "owl:DatatypeProperty"
 msgstr "Attribuutti"
