YTI-819 Add  "Add namespace to model" button & functionality in class table modal

--- a/po/fi.po
+++ b/po/fi.po
@@ -261,6 +261,9 @@ msgstr "Luo alaluokka"
 msgid "Create super class"
 msgstr "Luo yläluokka"
 
+msgid "Add namespace to model"
+msgstr "Lisää tietomalli riippuvuudeksi"
+
 msgid " without referencing concept"
 msgstr ""
 
