--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Copied"
@@ -41,6 +41,9 @@ msgstr "Kopioi"
 
 msgid "Imported namespaces"
 msgstr "Käytetyt nimiavaruudet"
+
+msgid "Defined by this model"
+msgstr "Tässä tietomallissa määritellyt"
 
 msgid "All models"
 msgstr "Kaikki tietomallit"
