--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-10-02 14:55+0300\n"
+"PO-Revision-Date: 2019-10-17 09:57+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1187,19 +1187,19 @@ msgid "en"
 msgstr "English"
 
 msgid "data language"
-msgstr "Data in language"
+msgstr "Content in language"
 
 msgid "data fi"
-msgstr "Data in finnish"
+msgstr "Content in Finnish"
 
 msgid "data en"
-msgstr "Data in english"
+msgstr "Content in English"
 
 msgid "data sv"
-msgstr "Data in swedish"
+msgstr "Content in Swedish"
 
 msgid "data ru"
-msgstr "Data in russian"
+msgstr "Content in Russian"
 
 msgid "Edit in progress"
 msgstr ""
